@@ -1,3 +1,10 @@
+Mon Sep 13 13:49:07 1993  Kevin Layer  (layer@sole)
+
+	* fi-composer.el: add fi:show-calls-to-and-from
+
+	* fi-lemacs.el: finish menus (some undefined functions were being
+	called for xref stuff)
+
 Fri Sep 10 10:34:14 1993  Kevin Layer  (layer@sole)
 
 	* fi-lemacs.el: missed fixing one of the menus
